// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the full tables with some analyses and a different primary metric in debug mode 1`] = `
<div
  class="analysis-participant-counts"
>
  <h3>
    Participant counts for the primary metric
  </h3>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="Component-horizontalScrollContainer-13"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-14 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Strategy
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-14 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Total
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-14 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    control
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-14 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    test
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    All participants
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    10
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    10
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the full tables with some analyses in debug mode 1`] = `
<div
  class="analysis-participant-counts"
>
  <h3>
    Participant counts for the primary metric
  </h3>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="Component-horizontalScrollContainer-5"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Strategy
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Total
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    control
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    test
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    All participants
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    600
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    400
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="1"
                  level="0"
                  path="1"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without crossovers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    900
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    540
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    360
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="2"
                  level="0"
                  path="2"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    850
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    510
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    340
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="3"
                  level="0"
                  path="3"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without crossovers and spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    800
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    480
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    320
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="4"
                  level="0"
                  path="4"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Exposed without crossovers and spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    700
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    420
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    280
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the full tables with some analyses in debug mode 2`] = `
<div
  class="analysis-latest-results"
>
  <h3>
    Latest results by metric
  </h3>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_1
        </code>
      </strong>
       
      with 
      1 week
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1000
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      900
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    />
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      850
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    />
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      800
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="4"
                    level="0"
                    path="4"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Exposed without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      700
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_2
        </code>
      </strong>
       
      with 
      1 hour
       attribution,
       
      <strong>
        not analyzed yet
      </strong>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_2
        </code>
      </strong>
       
      with 
      4 weeks
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      10
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      N/A
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Not analyzed yet
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_3
        </code>
      </strong>
       
      with 
      6 hours
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      2000
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1800
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1700
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1600
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="4"
                    level="0"
                    path="4"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Exposed without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1200
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
</div>
`;
